--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="js/scripts.js"></script>
-    <title>Coin Combinations</title>
+    <title></title>
   </head>
   <body>
 
